Blog address was missing.

--- a/web/clockcounter.html
+++ b/web/clockcounter.html
@@ -67,7 +67,7 @@
       <br/>
       <br/>
       <hr/>
-      <span style=""><a style=" font-size: 18px;" href="">Visit The 'Diving Into Dart' Blog</a></span>
+      <span style=""><a style=" font-size: 18px;" href="http://divingintodart.com/">Visit The 'Diving Into Dart' Blog</a></span>
     </div>
     
     <div class="card" id="statusCard" style="background-color:white;top:300px;z-index:100;text-align: left; margin-left;15px;">
